@@ -49,10 +49,6 @@ Driving::Driving(Jack jack, const Event& event, const System& system)
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void Driving::update()
 {
-  // Make sure direct gray codes from Stelladaptor stay in sync with
-  // simulated gray codes generated by PC keyboard or PC joystick
-  myCounter = (myGrayIndex << 2) | (myCounter & 3);
-
   // Digital events (from keyboard or joystick hats & buttons)
   setPin(DigitalPin::Six, myEvent.get(myFireEvent) == 0);
   int d_axis = myEvent.get(myXAxisValue);
@@ -92,8 +88,7 @@ void Driving::update()
   }
 
   // Only consider the lower-most bits (corresponding to pins 1 & 2)
-  myCounter &= 0x0f;
-  myGrayIndex = myCounter >> 2;
+  myGrayIndex = Int32(myCounter * SENSITIVITY / 4.0F) & 0b11;
 
   // Stelladaptor is the only controller that should set this
   int yaxis = myEvent.get(myYAxisValue);
@@ -111,6 +106,10 @@ void Driving::update()
       myGrayIndex = 2; // up + down
     else /* if(yaxis < 16384-4096) */
       myGrayIndex = 0; // no movement
+
+    // Make sure direct gray codes from Stelladaptor stay in sync with
+    // simulated gray codes generated by PC keyboard or PC joystick
+    myCounter = myGrayIndex / SENSITIVITY * 4.0F;
   }
 
   // Gray codes for rotation
@@ -154,3 +153,13 @@ bool Driving::setMouseControl(
 
   return true;
 }
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+void Driving::setSensitivity(int sensitivity)
+{
+  BSPF::clamp(sensitivity, 1, 20, 10);
+  SENSITIVITY = sensitivity / 10.0F;
+}
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+float Driving::SENSITIVITY = 1.0;
